--- a/package.json
+++ b/package.json
@@ -9,19 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdx-js/loader": "3.0.1",
+    "@mdx-js/react": "3.0.1",
+    "@next/mdx": "14.1.4",
+    "@types/mdx": "2.0.12",
+    "@types/react-syntax-highlighter": "15.5.11",
+    "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.4"
+    "react-markdown": "9.0.1",
+    "react-syntax-highlighter": "15.5.0",
+    "rehype-raw": "7.0.0",
+    "remark-gfm": "4.0.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@rocketseat/eslint-config": "2.2.2",
+    "@tailwindcss/typography": "0.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.1.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.4"
+    "typescript": "^5"
   }
 }
